Sat Jun  3 19:03:53 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          Remove TODO comments about storing the id on a list when a log
          record is deleted, and reusing those ids when a new log record
          is inserted.  If we did this, ids would be practically useless
          for use by client applications.  It's much more useful to have
          montonically increasing ids.

Sat Jun  3 17:37:11 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          Changed last instance of use of old iterator API to the new
          STL-like API.

          Changed purge_old_records(), delete_records(), and
          remove_old_records() to increment iterator before removing log
          record.  Removing the record invalidates the current iterator,
          and incrementing afterwards it resulted in undefined behavior.

Sat Jun  3 16:10:47 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:

          Changed the match() and delete_records() methods to iterate
          through the map by themselves instead of invoking match_i().
          While match_i() factored out common code, it did so at the
          expense of an extra conditional in the hot path.  Removed
          match_i().

Sat Jun  3 15:46:45 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:

          Remove private remove() method.  Update callers to invoke
          remove_i().

          Rename update() to update_i().
          Rename retrieve() to retrieve_i().

Sat Jun  3 05:25:09 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/PersistStore.cpp:
        * orbsvcs/orbsvcs/Log/PersistStore.h: